# SJTU-computer-system-engineering

./: .gitignore  README.md
src/: CMakeLists.txt
src/include/block/: allocator.h  manager.h
src/include/common/: error_code.h
src/include/distributed/: commit_log.h  dataserver.h  metadata_server.h
src/include/filesystem/: operations.h
src/include/map_reduce/: protocol.h
src/include/metadata/: inode.h  manager.h
src/map_reduce/: basic_mr.cc  mr_coordinator.cc  mr_sequential.cc  mr_worker.cc
test/: CMakeLists.txt
